[gd_scene load_steps=19 format=3 uid="uid://1ovvbp42yuc4"]

[ext_resource type="Texture2D" uid="uid://dbvsyx75cwsno" path="res://asset/water_bg.png" id="1_g1eoq"]
[ext_resource type="Script" path="res://game_screen.gd" id="1_ndqhf"]
[ext_resource type="PackedScene" uid="uid://rg23okumowo5" path="res://fish_column.tscn" id="1_ulwli"]
[ext_resource type="FontFile" uid="uid://b7xoe5ivvkpax" path="res://asset/joystix monospace.otf" id="3_o68n0"]
[ext_resource type="Texture2D" uid="uid://gei0t77eqc1u" path="res://asset/black.png" id="5_poscp"]
[ext_resource type="Texture2D" uid="uid://d1s04prsmons6" path="res://asset/next_level.png" id="6_6hab7"]
[ext_resource type="Texture2D" uid="uid://c8rbbej6eylg" path="res://asset/fish01.png" id="7_l0d0f"]
[ext_resource type="AudioStream" uid="uid://dyju70e3xopot" path="res://asset/win.mp3" id="8_affx8"]
[ext_resource type="Texture2D" uid="uid://cxlyj635a8l76" path="res://asset/fish/fish02.png" id="8_q1nws"]
[ext_resource type="AudioStream" uid="uid://2adev7kuqawd" path="res://asset/lose.mp3" id="9_l1muq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwbo8"]
bg_color = Color(0.882353, 0.866667, 0.988235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.541176, 0.545098, 0.952941, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3krm"]
bg_color = Color(0.541176, 0.545098, 0.952941, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ovta"]
bg_color = Color(0.596078, 0.596078, 0.596078, 1)

[sub_resource type="Animation" id="Animation_mnobm"]
resource_name = "Bake"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Fish:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 5, 3]
}

[sub_resource type="Animation" id="Animation_0muvc"]
resource_name = "Bg"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_78p5i"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Fish:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_44ldx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Fish:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5a432"]
_data = {
"Bake": SubResource("Animation_mnobm"),
"Bg": SubResource("Animation_0muvc"),
"Idle": SubResource("Animation_78p5i"),
"RESET": SubResource("Animation_44ldx")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ndqhf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(180, 320)
scale = Vector2(8, 8)
texture = ExtResource("1_g1eoq")
hframes = 2

[node name="FishCol" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="FishColumn" parent="FishCol" instance=ExtResource("1_ulwli")]
position = Vector2(179, 324)

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = 20.0
offset_top = 108.0
offset_right = 120.0
offset_bottom = 197.0
theme_override_fonts/font = ExtResource("3_o68n0")
theme_override_font_sizes/font_size = 30
text = "Fish
#01"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect3" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 360.0
offset_bottom = 640.0
texture = ExtResource("5_poscp")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 45.0
offset_top = 160.0
offset_right = 72.0
offset_bottom = 192.0
scale = Vector2(10, 10)
texture = ExtResource("6_6hab7")

[node name="Back" type="Button" parent="Control"]
layout_mode = 0
offset_left = 80.0
offset_top = 408.0
offset_right = 168.0
offset_bottom = 445.0
theme_override_colors/font_color = Color(0.541176, 0.545098, 0.952941, 1)
theme_override_fonts/font = ExtResource("3_o68n0")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_rwbo8")
text = "Back"

[node name="Next" type="Button" parent="Control"]
layout_mode = 0
offset_left = 189.0
offset_top = 408.0
offset_right = 277.0
offset_bottom = 445.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_o68n0")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_m3krm")
theme_override_styles/disabled = SubResource("StyleBoxFlat_5ovta")
text = "Next"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 77.0
offset_top = 200.0
offset_right = 286.0
offset_bottom = 231.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_o68n0")
theme_override_font_sizes/font_size = 30
text = "CAPTURED"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 45.0
offset_top = 247.0
offset_right = 315.0
offset_bottom = 283.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_o68n0")
theme_override_font_sizes/font_size = 20
text = "score : 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = 123.0
offset_top = 290.0
offset_right = 160.0
offset_bottom = 312.0
scale = Vector2(3, 3)
texture = ExtResource("7_l0d0f")

[node name="Fish" type="Sprite2D" parent="Control"]
position = Vector2(176, 333)
scale = Vector2(3, 3)
texture = ExtResource("8_q1nws")
hframes = 2
vframes = 3

[node name="winSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_affx8")

[node name="loseSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_l1muq")

[node name="Label2" type="Label" parent="."]
offset_left = 47.0
offset_top = 584.0
offset_right = 307.0
offset_bottom = 638.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_o68n0")
theme_override_font_sizes/font_size = 10
text = "press <Z> to Dash / Sprint
press <Space> to Rise"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Bg"
libraries = {
"": SubResource("AnimationLibrary_5a432")
}

[connection signal="game_lose" from="FishCol/FishColumn" to="." method="_on_fish_column_game_lose"]
[connection signal="game_win" from="FishCol/FishColumn" to="." method="_on_fish_column_game_win"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_next_pressed"]
